--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "4.0.0-beta.7",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-static": "^0.7.11",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss": "^7.0.13",
     "postcss-browser-reporter": "^0.5.0",
