--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "eslint . --ext .js,.ts,.tsx",
     "prebuild": "rimraf build",
     "prettier": "prettier --write \"**/*.{js,ts,tsx}\"",
-    "serve": "node ./server.js",
+    "serve": "yarn build && node ./server.js",
     "start": "webpack-dev-server --config=webpack/config-dev-server.js",
     "stylelint": "stylelint \"src/**/*.css\"",
     "test": "yarn prettier && yarn eslint && yarn stylelint",
@@ -29,7 +29,7 @@
   "engines": {
     "node": ">=10.16"
   },
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "7.8.4",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
@@ -40,8 +40,6 @@
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
     "@babel/preset-typescript": "7.8.3",
-    "@material-ui/core": "4.9.2",
-    "@material-ui/icons": "4.9.1",
     "@types/classnames": "^2.2.9",
     "@types/node": "^13.7.1",
     "@types/react": "^16.9.19",
@@ -54,16 +52,14 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
     "babel-plugin-dynamic-import-node": "^2.3.0",
-    "babel-plugin-transform-format-message": "^6.2.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^2.1.0",
-    "dotenv": "^6.2.0",
+    "css-loader": "^3.4.2",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
-    "eslint-import-resolver-jest": "^3.0.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-format-message": "^6.2.3",
     "eslint-plugin-immutable": "^1.0.0",
@@ -76,43 +72,41 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-standard": "^4.0.1",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "4.0.0-beta.7",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-static": "^0.7.11",
+    "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss": "^7.0.13",
-    "postcss-browser-reporter": "^0.5.0",
+    "postcss-browser-reporter": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
-    "postcss-hexrgba": "^1.0.1",
+    "postcss-hexrgba": "^2.0.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-reporter": "^6.0.1",
     "postcss-safe-parser": "^4.0.2",
     "postcss-url": "^8.0.0",
     "prettier": "^1.15.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.6.3",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.7",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "rimraf": "^2.6.3",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "stylelint": "^9.10.0",
-    "stylelint-config-standard": "^18.2.0",
+    "style-loader": "^1.1.3",
+    "stylelint": "^13.2.0",
+    "stylelint-config-standard": "^20.0.0",
+    "rimraf": "^3.0.2",
     "thread-loader": "^2.1.3",
-    "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
-    "url-loader": "^1.1.2",
-    "webpack": "4.28.4",
-    "webpack-cli": "3.2.1",
-    "webpack-dev-server": "3.1.14",
+    "url-loader": "^3.0.0",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2",
     "webpackbar": "^4.0.0"
+  },
+  "dependencies": {
+    "@material-ui/core": "4.9.3",
+    "@material-ui/icons": "4.9.1",
+    "node-static": "^0.7.11",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.1",
+    "reselect": "^4.0.0"
   }
 }
