--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "NODE_ENV=production webpack --config=webpack/config-prod.js",
     "clean": "rimraf build",
     "eslint": "eslint . --ext .js,.ts,.tsx",
+    "extract": "NODE_ENV=locale format-message extract -g underscored_crc32 -o src/locales/en.json 'src/**/*.js' 'src/**/*.ts' 'src/**/*.tsx'",
     "prebuild": "rimraf build",
     "prettier": "prettier --write \"**/*.{js,ts,tsx}\"",
     "serve": "yarn build && node ./server.js",
@@ -52,6 +53,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
     "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-transform-format-message": "^6.2.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
@@ -72,6 +74,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-standard": "^4.0.1",
+    "format-message-cli": "^6.2.3",
     "html-webpack-plugin": "4.0.0-beta.7",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -85,10 +88,10 @@
     "postcss-safe-parser": "^4.0.2",
     "postcss-url": "^8.0.0",
     "prettier": "^1.15.3",
+    "rimraf": "^3.0.2",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.0",
     "stylelint-config-standard": "^20.0.0",
-    "rimraf": "^3.0.2",
     "thread-loader": "^2.1.3",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
@@ -102,6 +105,7 @@
   "dependencies": {
     "@material-ui/core": "4.9.3",
     "@material-ui/icons": "4.9.1",
+    "format-message": "^6.2.3",
     "node-static": "^0.7.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
