--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "NODE_ENV=production webpack --config=webpack/config-prod.js",
     "clean": "rimraf build",
     "eslint": "eslint . --ext .js,.ts,.tsx",
-    "extract": "NODE_ENV=locale format-message extract -g underscored_crc32 -o src/locales/en.json 'src/**/*.js' 'src/**/*.ts' 'src/**/*.tsx'",
+    "extractlocales": "NODE_ENV=locale format-message extract -g underscored_crc32 -o src/locales/en.json 'src/**/*.js' 'src/**/*.ts' 'src/**/*.tsx'",
     "prebuild": "rimraf build",
     "prettier": "prettier --write \"**/*.{js,ts,tsx}\"",
     "serve": "yarn build && node ./server.js",
