--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config=webpack/config-prod.js",
     "clean": "rimraf build",
+    "deploy": "gh-pages -d dist",
     "eslint": "eslint . --ext .js,.ts,.tsx",
     "extractlocales": "NODE_ENV=locale format-message extract -g underscored_crc32 -o src/locales/en.json 'src/**/*.js' 'src/**/*.ts' 'src/**/*.tsx'",
+    "lint": "yarn eslint && yarn tsc && yarn stylelint",
     "prebuild": "rimraf build",
     "prettier": "prettier --write \"**/*.{js,ts,tsx}\"",
-    "serve": "yarn build && node ./server.js",
+    "serve": "node ./server.js",
     "start": "webpack-dev-server --config=webpack/config-dev-server.js",
     "stylelint": "stylelint \"src/**/*.css\"",
-    "test": "yarn prettier && yarn eslint && yarn stylelint",
+    "test": "yarn lint",
     "tsc": "tsc"
   },
   "engines": {
@@ -75,6 +77,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-standard": "^4.0.1",
     "format-message-cli": "^6.2.3",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "4.0.0-beta.7",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
